--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,12 +39,9 @@ embed {
     overflow: hidden;
 }
 
-$header-height: 48px;
-.nav {
-    height: $header-height;
-    min-height: $header-height;
-    max-height: $header-height;
-    margin: 0;
+.header {
+    margin: 0 !important;
+    border-bottom: solid rgba(0, 0, 0, 0.5);
 }
 
 .footer {
