--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,10 +1,4 @@
-<section class="nav">
-    <div class="columns has-background-dark has-text-white has-text-centered nav">
-        <a class="column has-text-white" href="/">
-      Home
-    </a>
-        <a class="column has-text-white" href="/">
-      Blog
-    </a>
-    </div>
-</section>
+<header class="header columns has-background-dark has-text-white has-text-centered nav">
+    <a class="column has-text-white" href="/">Home</a>
+    <a class="column has-text-white" href="/">Blog</a>
+</header>
