--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,6 +42,9 @@ embed {
 .header {
     margin: 0 !important;
     border-bottom: solid rgba(0, 0, 0, 0.5);
+    a:hover {
+        text-decoration: underline;
+    }
 }
 
 .footer {
