--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
-@import "../sass/bulma.sass";
+@import "../sass/bulma/bulma.sass";
+@import "../sass/bulma-tooltips/bulma-tooltips.sass";
 @import "./icons.scss";
 @import "./start-frame.scss";
 .no-font {
