Header is now correctly shown on mobile

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,4 +1,4 @@
-<header class="header columns has-background-dark has-text-white has-text-centered nav">
+<header class="header columns is-mobile has-background-dark has-text-white has-text-centered nav">
     <a class="column has-text-white" href="/">Home</a>
-    <a class="column has-text-white" href="/">Blog</a>
+    <a class="column has-text-white" href="https://blog.sakul6499.de/">Blog</a>
 </header>
