--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -21,3 +21,36 @@
     border-color: rgba(25,25,25,100);
     border-style: solid;
 }
+
+#title-page {
+    background: rgb(54,54,54);
+background: -moz-radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
+background: -webkit-radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
+background: radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#363636",endColorstr="#191919",GradientType=1);
+}
+
+#binary {
+    margin-top: 150px; 
+
+    font-size: 2em;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 15s linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+
+    z-index: 0;
+}
+  
+@keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+}
