--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -6,7 +6,7 @@
     position: absolute;
 
     color: whitesmoke;
-    background-color: rgba(25,25,25,100);
+    background-color: #363636;
 
     margin-top: 10px;
     margin-left: 10px;
@@ -18,16 +18,12 @@
 
     border-radius: 10%;
     border-width: 1px;
-    border-color: rgba(25,25,25,100);
+    border-color: #323232;
     border-style: solid;
 }
 
 #title-page {
-    background: rgb(54,54,54);
-background: -moz-radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
-background: -webkit-radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
-background: radial-gradient(circle, rgba(54,54,54,1) 0%, rgba(25,25,25,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#363636",endColorstr="#191919",GradientType=1);
+    background: #191919
 }
 
 #binary {
@@ -40,6 +36,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#363636",endCo
     background-repeat: no-repeat;
     background-size: 80%;
     animation: animate 15s linear infinite;
+    background-clip: text;
+    -moz-background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 
