Moved old tags and converted them
Signed-off-by: @Sakul6499 | Lukas Weber <me@sakul6499.de>

--- a/src/home/_components/AboutMe.scss
+++ b/src/home/_components/AboutMe.scss
@@ -1,6 +1,7 @@
 $tablet: 768px;
 
 #AboutMe {
+    background-color: whitesmoke;
     padding: 16px;
 
     @media screen and (min-width: $tablet) {
