--- a/src/home/_components/AboutMe.scss
+++ b/src/home/_components/AboutMe.scss
@@ -9,6 +9,11 @@ $tablet: 768px;
     }
 
     article {
+        a {
+            color: magenta;
+            text-decoration: underline;
+        }
+        
         @media screen and (max-width: $tablet) {
             margin-bottom: 32px;
             border-bottom: solid black;
