--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -40,7 +40,7 @@
 #binary {
     position: absolute;
     top: 60%;
-    left: 40%;
+    left: 10%;
     z-index: 3;
 
     font-size: 2em;
@@ -48,10 +48,10 @@
     text-align: right;
     overflow: hidden;
 
-    background: linear-gradient(90deg, #000, #fff, #000);
+    background: linear-gradient(90deg, transparent, #fff, transparent);
     background-repeat: no-repeat;
     background-size: 80%;
-    animation: animate 15s linear infinite;
+    animation: animate 10s linear infinite;
     background-clip: text;
     -moz-background-clip: text;
     -webkit-background-clip: text;
