--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -1,91 +1,106 @@
 #title-text {
-    position: absolute;
-    top: 64px;
-    left: 32px;
-    z-index: 3;
+  position: absolute;
+  top: 64px;
+  left: 32px;
+  z-index: 3;
 
-    padding: 10px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #191919;
-    border-width: 2px;
+  padding: 10px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #191919;
+  border-width: 2px;
 
-    background-color: #202020;
+  background-color: #202020;
 }
 
-#blog-link {
-    position: absolute;
+#icons {
+  position: absolute;
+  top: 216px;
+  left: 22px;
 
-    color: whitesmoke;
-    background-color: #363636;
+  height: 32px;
 
-    margin-top: 10px;
-    margin-left: 10px;
-
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-
-    border-radius: 10%;
+  a {
+    border-radius: 100%;
     border-width: 1px;
     border-color: #323232;
     border-style: solid;
+
+    background-color: #363636;
+
+    width: 32px;
+    height: 32px;
+
+    margin-left: 26px;
+
+    z-index: 4;
+
+    text-align: center;
+
+    svg {
+      width: 48px;
+      height: 48px;
+
+      color: white;
+    }
+  }
 }
 
 #title-page {
-    background: #191919
+  background: #191919;
 }
 
 #binary {
-    position: absolute;
-    top: 60%;
-    left: 10%;
-    z-index: 3;
+  position: absolute;
+  top: 60%;
+  left: 10%;
+  z-index: 3;
 
-    font-size: 2em;
-    letter-spacing: 4px;
-    text-align: right;
-    overflow: hidden;
+  font-size: 2em;
+  letter-spacing: 4px;
+  text-align: right;
+  overflow: hidden;
 
-    background: linear-gradient(90deg, transparent, #fff, transparent);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    animation: animate 10s linear infinite;
-    background-clip: text;
-    -moz-background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  background: linear-gradient(90deg, transparent, #fff, transparent);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 10s linear infinite;
+  background-clip: text;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
-  
+
 @keyframes animate {
-    0% {
-      background-position: -500%;
-    }
-    100% {
-      background-position: 500%;
-    }
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
 }
 
 #down-icon {
-    position: relative;
-    top: -106px;
-    left: calc(50% - 32px);
+  position: relative;
+  top: -106px;
+  left: calc(50% - 32px);
 
-    color: whitesmoke;
-    animation: icon-color-anim 5s infinite, bounce 5s infinite 5s;
+  color: whitesmoke;
+  animation: icon-color-anim 5s infinite, bounce 5s infinite 5s;
 
-    svg {
-        width: 64px;
-        height: 64px;
-    }
+  svg {
+    width: 64px;
+    height: 64px;
+  }
 }
 
 @keyframes bounce {
-    0%, 10%, 100% {
-        top: -106px;
-    }
-    5% {
-        top: -128px;
-    }
+  0%,
+  10%,
+  100% {
+    top: -106px;
+  }
+  5% {
+    top: -128px;
+  }
 }
