--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -31,7 +31,8 @@
     width: 32px;
     height: 32px;
 
-    margin-left: 26px;
+    margin-left: 16px;
+    margin-right: 16px;
 
     z-index: 4;
 
