Blog rework/finished
Signed-off-by: @Sakul6499 | Lukas Weber <me@sakul6499.de>

--- a/src/blog/BlogPosts.scss
+++ b/src/blog/BlogPosts.scss
@@ -1,71 +1,9 @@
-#icon-home {
-  position: fixed;
+#posts {
+    position: absolute;
+    width: 80%;
+    left: 10%;
 
-  z-index: 100;
-
-  color: #363636;
-  background-color: whitesmoke;
-
-  border-color: #363636;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 150px;
-  padding: 4px;
-
-  top: 8px;
-  left: 8px;
-
-  &,
-  * {
-    width: 48px !important;
-    height: 48px !important;
-  }
-}
-
-#icon-return {
-  position: fixed;
-
-  z-index: 100;
-
-  color: #363636;
-  background-color: whitesmoke;
-
-  border-color: #363636;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 150px;
-  padding: 4px;
-
-  top: 8px;
-  left: 72px;
-
-  &,
-  * {
-    width: 48px !important;
-    height: 48px !important;
-  }
-}
-
-#icon-top {
-  position: fixed;
-
-  z-index: 100;
-
-  color: #363636;
-  background-color: whitesmoke;
-
-  border-color: #363636;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 150px;
-  padding: 4px;
-
-  bottom: 8px;
-  right: 8px;
-
-  &,
-  * {
-    width: 48px !important;
-    height: 48px !important;
-  }
+    .message {
+        margin: 10px;
+    }
 }
