--- a/src/home/_components/TitlePage.scss
+++ b/src/home/_components/TitlePage.scss
@@ -1,22 +1,44 @@
-#title-text {
-  position: absolute;
-  top: 64px;
-  left: 32px;
-  z-index: 3;
+$tablet: 768px;
 
+#title-text {
+  background-color: #202020;
   padding: 10px;
   border-radius: 6px;
   border-style: solid;
   border-color: #191919;
   border-width: 2px;
 
-  background-color: #202020;
+  z-index: 3;
+  position: absolute;
+  top: 64px;
+
+  @media screen and (max-width: $tablet) {
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 90%;
+  }
+  @media screen and (min-width: $tablet) {
+    left: 32px;
+  }
 }
 
 #icons {
   position: absolute;
-  top: 216px;
-  left: 22px;
+
+  @media screen and (max-width: $tablet) {
+    top: 256px;
+    left: 50%;
+
+    transform: translateX(-50%);
+
+    width: 100%;
+    text-align: center;
+  }
+  @media screen and (min-width: $tablet) {
+    top: 216px;
+    left: 22px;
+  }
 
   height: 32px;
 
@@ -31,8 +53,14 @@
     width: 32px;
     height: 32px;
 
-    margin-left: 16px;
-    margin-right: 16px;
+    @media screen and (max-width: $tablet) {
+      margin-left: 8px;
+      margin-right: 8px;
+    }
+    @media screen and (min-width: $tablet) {
+      margin-left: 16px;
+      margin-right: 16px;
+    }
 
     z-index: 4;
 
