--- a/src/home/_components/TimeLine.scss
+++ b/src/home/_components/TimeLine.scss
@@ -3,46 +3,55 @@ $tablet: 768px;
 #timeline {
   width: 100%;
   padding-top: 16px;
-}
 
-.date {
-  width: 25%;
-  display: inline-block;
-}
+  .entry {
+    width: 100%;
+    display: inline-block;
 
-.texts {
-  width: 75%;
-  display: inline-block;
+    .date {
+      width: 25%;
+      display: inline-block;
+    }
 
-  border-left: solid magenta 4px;
-}
+    .texts {
+      width: 75%;
+      display: inline-block;
 
-.entry {
-  width: 100%;
-  display: inline-block;
-}
+      border-left: solid magenta 4px;
 
-.dotted {
-  @media screen and (max-width: $tablet) {
-    width: calc(100% / 3.8);
-  }
-  @media screen and (min-width: $tablet) {
-    width: calc(100% / 3.88);
-  }
-  height: 32px;
-
-  border-right: dotted magenta 4px;
-}
-
-.spacing {
-  @media screen and (max-width: $tablet) {
-    width: calc(100% / 3.8);
-  }
-  @media screen and (min-width: $tablet) {
-    width: calc(100% / 3.88);
+      div {
+        @media screen and (max-width: $tablet) {
+          font-size: 1rem;
+        }
+        @media screen and (min-width: $tablet) {
+          font-size: 1.25rem;
+        }
+      }
+    }
   }
 
-  padding-top: 16px;
+  .dotted {
+    @media screen and (max-width: $tablet) {
+      width: calc(100% / 3.8);
+    }
+    @media screen and (min-width: $tablet) {
+      width: calc(100% / 3.88);
+    }
+    height: 32px;
 
-  border-right: solid magenta 4px;
+    border-right: dotted magenta 4px;
+  }
+
+  .spacing {
+    @media screen and (max-width: $tablet) {
+      width: calc(100% / 3.8);
+    }
+    @media screen and (min-width: $tablet) {
+      width: calc(100% / 3.88);
+    }
+
+    padding-top: 16px;
+
+    border-right: solid magenta 4px;
+  }
 }
