--- a/src/blog/BlogHeader.scss
+++ b/src/blog/BlogHeader.scss
@@ -1,10 +1,21 @@
+$tablet: 768px;
+
 #container {
   position: absolute;
-  top: 20%;
-  left: 30%;
 
-  width: 40%;
-  height: auto;
+  left: 50%;
+  transform: translateX(-50%);
+
+  @media screen and (max-width: $tablet) {
+    top: 13%;
+    width: 90%;
+    height: auto;
+  }
+  @media screen and (min-width: $tablet) {
+    top: 20%;
+    width: 40%;
+    height: auto;
+  }
 
   background-color: #222222;
 
@@ -28,11 +39,21 @@
 
 #blog-icons {
   position: absolute;
-  top: 10%;
+
+  @media screen and (max-width: $tablet) {
+    top: 2%;
+  }
+  @media screen and (min-width: $tablet) {
+    top: 10%;
+  }
+
   left: 50%;
   transform: translateX(-50%);
 
+  width: 100%;
   height: 32px;
+
+  text-align: center;
 
   a {
     border-radius: 100%;
