--- a/themes/aether/layout/layout.ejs
+++ b/themes/aether/layout/layout.ejs
@@ -1,6 +1,11 @@
+<%=/* Layout */%>
+<%=/* Defines the layout of each page. */%>
+
 <!DOCTYPE html>
 <html>
-  <%- partial('_partial/head') %>
-  <%- partial('_partial/body') %>
-  <%- partial('_partial/end') %>
+  <%=/* Include head part */%>
+  <%- partial('_segment/head') %>
+
+  <%=/* Include body part*/%>
+  <%- partial('_segment/body') %>
 </html>
