Added comment to header.ejs

--- a/themes/aether/layout/_partial/header.ejs
+++ b/themes/aether/layout/_partial/header.ejs
@@ -1,3 +1,6 @@
+<%=/* Header */%>
+<%=/* Includes the navbar and creates a full-height box as a greeting. */%>
+
 <section class="hero is-dark is-fullheight">
   <div class="hero-head">
     <%- partial('_partial/navbar') %>
