Added comment to navbar

--- a/themes/aether/layout/_partial/navbar.ejs
+++ b/themes/aether/layout/_partial/navbar.ejs
@@ -1,3 +1,7 @@
+<%=/* NavBar */%>
+<%=/* Creates a navbar with all essential links. */%>
+<%=/* Works on mobile too! */%>
+
 <div class="blog-masthead">
   <div class="container">
     <nav class="blog-nav">
