--- a/themes/aether/layout/_partial/mod/disqus_comments.ejs
+++ b/themes/aether/layout/_partial/mod/disqus_comments.ejs
@@ -1,5 +1,8 @@
+<%=/* Disqus comment integration */%>
+<%=/* Integrates the disqus comment thread/section on a page that has 'page.comments' enabled. */%>
+
 <% if(page.comments && theme.disqus_shortname){ %>
-    <div class="blog-post-comments">
+    <div>
         <h3>Comments:</h3>
         <div id="disqus_thread">
             <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
