--- a/themes/aether/layout/_script/analytics.ejs
+++ b/themes/aether/layout/_script/analytics.ejs
@@ -1,3 +1,6 @@
+<%=/* Google Analytics */%>
+<%=/* Google Analytics integration script. */%>
+
 <% if (theme.google_analytics){ %>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-160626331-1"></script>
     <script>
