Moved body and head into own folder

--- a/themes/aether/layout/_segment/head.ejs
+++ b/themes/aether/layout/_segment/head.ejs
@@ -43,6 +43,7 @@
   <% } %>
 
   <%# JavaScript %>
-  <%- partial('mod/analytics') %>
+  <%- partial('_script/analytics') %>
+  <%- partial('_script/disqus') %>
   <%- js('js/bulma-menu') %>
 </head>
