--- a/themes/aether/layout/_partial/article-excerpt.ejs
+++ b/themes/aether/layout/_partial/article-excerpt.ejs
@@ -1,25 +1,18 @@
-<div class="blog-post">
-    <!-- Title -->
-    <h2 class="blog-post-title">
-        <a href="<%- config.root %><%- item.path %>">
+<%=/* Article excerpt */%>
+<%=/* Creates a little overview over a post. */%>
+
+<a href="<%- config.root %><%- item.path %>"></a>
+    <article class="message">
+        <div class="message-header">
             <%- item.title %>
-        </a>
-    </h2>
-    <!-- Date and Author -->
-    <p class="blog-post-meta">
-        <%= item.date.format(config.date_format) %>
-        <% if(item.author) { %>
-            by <%- item.author %>
-        <% } %>
-    </p>
-    <!-- Content -->
-    <%- item.excerpt || item.content %>
-    <!-- Only display the Read More link if we are displaying an excerpt -->
-    <% if(item.excerpt) { %>
+        </div>
+        <p>
+            <%- item.excerpt || item.content %>
+        </p>
         <p>
             <a href="<%- config.root %><%- item.path %>">
                 <%= theme.excerpt_link %>
             </a>
         </p>
-    <% } %>
-</div>
+    </article>
+</a>
