--- a/themes/aether/layout/_partial/article-full.ejs
+++ b/themes/aether/layout/_partial/article-full.ejs
@@ -19,5 +19,5 @@
     <%- partial('article-tags', {item: item}) %>
     <%- partial('article-categories', {item: item}) %>
 
-    <%- partial('mod/comments') %>
+    <%- partial('mod/disqus_comments') %>
 </div>
