--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -34,3 +34,26 @@
         top: 0vh
     5%
         top: 4vh
+
+#index 
+    margin-top: 8px
+    #sidebar
+        padding-right: 16px
+    #excerpts 
+        .message
+            padding-left: 8px
+            .message-header
+                &, *
+                    text-decoration: none
+                    color: white
+                span
+                    *
+                        text-decoration: none
+                    *:hover
+                        text-decoration: underline
+        *
+            text-decoration: none
+            color: black
+            .excerpt_link
+                text-decoration: underline
+                color: blue
