--- a/themes/aether/layout/index.ejs
+++ b/themes/aether/layout/index.ejs
@@ -2,9 +2,17 @@
 <%=/* A list of posts should be displayed here to further navigate */%>
 <%=/* (Idea: A sort of archive-page/component could be used here AND in the archive */%>
 
-<% page.posts.each(function(item){ %>
-    <%- partial('_partial/article-excerpt', {item: item}) %>
-<% }); %>
+<div class="columns" id="index">
+    <div class="column" id="excerpts">
+        <% page.posts.each(function(item){ %>
+            <%- partial('_partial/article-excerpt', {item: item}) %>
+        <% }); %>
+    </div>
+    <div class="column is-2" id="sidebar">
+        <%- partial('_partial/sidebar') %>
+    </div>
+</div>
+
 <%- partial('_partial/pagination') %>
 
 <!-- Previous content: -->
