--- a/themes/aether/layout/_partial/footer.ejs
+++ b/themes/aether/layout/_partial/footer.ejs
@@ -1,1 +1,8 @@
-<span>FOOTER</span>
+<hr>
+<div class="container has-text-centered" id="footer">
+    <div class="columns">
+        <a href="/credit" class="column">Credits</a>
+        <span>Made with <span class="heart">&hearts;</span> by @Sakul6499</span>
+        <a href="/legal" class="column">Legal</a>
+    </div>
+</div>
