Updated style.sass for footer

--- a/themes/aether/source/sass/style.sass
+++ b/themes/aether/source/sass/style.sass
@@ -57,3 +57,10 @@
             .excerpt_link
                 text-decoration: underline
                 color: blue
+
+#footer
+    padding-bottom: 8vh
+
+.heart
+    color: red
+    font-size: 2.5vw
