--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -14,9 +14,16 @@
                     </div>
                     <div class="column is-half">
                         <div class="is-size-5 is-family-code">Contact information</div>
-                        E-Mail: <a href="mailto:me@sakul6499.de">me@sakul6499.de</a><br /> Telephone: +49 (0) 157 56 189 612<br />
-                        <br /> I generally prefer getting contacted in ways stated on my
-                        <a href="/#contact-me">website</a>, or by email.<br />
+                        <span>
+                            E-Mail: <a href="mailto:me@sakul6499.de">me@sakul6499.de</a>
+                        </span>
+                        <br /> 
+                        <span>
+                            Telephone: +49 (0) 157 56 189 612
+                        </span>
+                        <br />
+                        <br />
+                        I prefer to be contacted via e-mail where I can answer within a reasonable time-frame.
                     </div>
                 </div>
             </article>
