Updated and approved disclaimer

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -61,21 +61,21 @@
                     require a written permission of the author.
                     <br /><br /> This excludes links to this website (e.g. sharing of an article with another audience), using articles as references (e.g. for your own projects) or other creative uses.
                     <br /><br /> However, generally applies:<br />
+                    I am doing this not only for myself, but to share information, strategies, code, projects and ideas with others.
+                    As long as our goals are the same, there will be no issues at all.
+                    You are allowed to use the projects and code from my website, as long as you:
                     <ul>
                         <li>
-                            Request permission to use or reference my content (if not stated differently above)
+                            Credit me, my work and a way of contacting me (e.g. use the link to the project or post you are using/referencing)
                         </li>
                         <li>
-                            Inform me (e.g. via e-email, see
-                            <a href="/#contact-me">contact me</a>) that you are using or referencing my content in any way
+                            Inform me (e.g. via <a href="mailto:me@sakul6499.de">e-email</a>) that you are using or referencing my content in any way
                         </li>
                         <li>
-                            Inform me about potential changes (e.g. you made an article or a video about or referencing my work and you are planning to change it or changed it already)
+                            Accept and adhere to the license of that post and/or project
                         </li>
-                        <li>Credit the owner and reference it visibly</li>
                     </ul>
-                    <b>Single posts from my blog may exclude and differ from this if
-            stated differently there.</b>
+                    <b>Single posts and projects may exclude and differ from this if stated differently on the project or post page.</b>
                 </div>
             </article>
         </div>
