Split-up disclaimer

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -1,5 +1,4 @@
 <div>
-    <div class="tile is-parent no-padding-bottom">
         <div class="tile is-parent">
             <article class="tile is-child notification is-dark">
                 <p class="title">Legal Disclosure</p>
@@ -27,55 +26,157 @@
                     </div>
                 </div>
             </article>
+    </div>
+    
+    <div class="columns">
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for content
+                        </div>
+                        We are liable for our <b>own</b> content on this website according to §7¶1 German Telemedia Act (TMG). However, according to §8-10 German Telemedia Act (TMG) service providers are not obligated to permanently monitor submitted and/or stored information, as well as searching for evidences that indicate illegal activities.
+                        <br /><br />
+                        Legal obligations to remove or block the use of certain information remains excluded from this. In such a case, a liability is only possible from the time of knowledge about a specific violation of law. Illegal content will be removed immediately after knowledge of them.
+                        <br /><br />
+                    </div>
+                </article>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for content
+                        </div>
+                        BLA ...
+                    </div>
+                </article>
+            </div>
         </div>
     </div>
+    <div class="columns">
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for links
+                        </div>
+                        This website might contain links to external websites and services of third-parties. We can and will not guarantee for there content.
+                        <br /><br />
+                        The linked websites of said third-parties have been checked for possible violations and illegal activities at the time of the establishment of the link and nothing could be found. However, permanent monitoring of linked websites cannot be imposed without reasonable indications that there has been a violation of law. Illegal links will be removed immediately after acknowledging them.
+                            <br /><br />
+                    </div>
+                </article>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for content
+                        </div>
+                        BLA ...
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+    <div class="columns">
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for third-party software, libraries and solutions
+                        </div>
+                        Furthermore, used third-party software, libraries and software, as described in <a href="/credits.html">credits</a>, and links in any form to said third-party services are <b>not</b> guaranteed to work, are <b>not</b> guaranteed to provide only legal content and are <b>not</b> guaranteed to work with the same terms as this website. 
+                        <br /> 
+                        Terms of service apply from used third-parties solutions.
+                        <br /><br />
+                    </div>
+                </article>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for content
+                        </div>
+                        BLA ...
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+    <div class="columns">
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for copyright
+                        </div>
+                        Content, data and information published on this website are subjected to the german copyright laws.<br /> Reproduction, editing, distributing as well as the use of any other use outside the copyright law are strictly forbidden and require a written permission of the author.
+                        <br /><br />
+                        This excludes links to this website (e.g. sharing of an article with another audience), using articles as references (e.g. for your own projects) or other creative uses.
+                        <br /><br />
+                        However, generally applies:<br />
+                        I am doing this not only for myself, but to share information, strategies, code, projects and ideas with others.
+                        As long as our goals are the same, there will be no issues at all.
+                        You are allowed to use the projects and code from my website, as long as you:
+                        <ul>
+                            <li>
+                                Credit me, my work and a way of contacting me (e.g. use the link to the project or post you are using/referencing)
+                            </li>
+                            <li>
+                                Inform me (e.g. via <a href="mailto:me@sakul6499.de">e-email</a>) that you are using or referencing my content in any way
+                            </li>
+                            <li>
+                                Accept and adhere to the license of that post and/or project
+                            </li>
+                        </ul>
+                        <b>Single posts and projects may exclude and differ from this if stated differently on the project or post page.</b>
+                    </div>
+                </article>
+            </div>
+        </div>
+        <div class="column">
+            <div class="tile is-parent">
+                <article class="tile is-child notification is-warning">
+                    <div class="content">
+                        <div class="is-size-5 is-family-code">
+                            Liability for content
+                        </div>
+                        BLA ...
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
     <div class="tile is-parent no-padding-top">
         <div class="tile is-parent">
             <article class="tile is-child notification is-warning">
                 <h1 class="title">Disclaimer</h1>
-                <div class="content">
-                    <div class="is-size-5 is-family-code">Liability for content</div>
-                    We are liable for our <b>own</b> content on this website according to §7¶1 German Telemedia Act (TMG). However, according to §8-10 German Telemedia Act (TMG) service providers are not obligated to permanently monitor submitted and/or
-                    stored information, as well as searching for evidences that indicate illegal activities.
-                    <br /><br /> Legal obligations to remove or block the use of certain information remains excluded from this. In such a case, a liability is only possible from the time of knowledge about a specific violation of law. Illegal content
-                    will be removed immediately after knowledge of them.
-                    <br /><br />
+                
 
-                    <div class="is-size-5 is-family-code">Liability for links</div>
-                    This website might contain links to external websites and services of third-parties. We can and will not guarantee for there content.
-                    <br /><br /> The linked websites of said third-parties have been checked for possible violations and illegal activities at the time of the establishment of the link and nothing could be found. However, permanent monitoring of linked
-                    websites cannot be imposed without reasonable indications that there has been a violation of law. Illegal links will be removed immediately after acknowledging them.
-                    <br /><br />
+                    
 
-                    <div class="is-size-5 is-family-code">
-                        Liability for third-party software, libraries and solutions
-                    </div>
-                    Furthermore, used third-party software, libraries and software, as described in <a href="/credits.html">credits</a>, and links in any form to said third-party services are <b>not</b> guaranteed to work, are <b>not</b> guaranteed to
-                    provide only legal content and are
-                    <b>not</b> guaranteed to work with the same terms as this website.
-                    <br /> Terms of service apply from used third-parties solutions.
-                    <br /><br />
-
-                    <div class="is-size-5 is-family-code">Liability for copyright</div>
-                    Content, data and information published on this website are subjected to the german copyright laws.<br /> Reproduction, editing, distributing as well as the use of any other use outside the copyright law are strictly forbidden and
-                    require a written permission of the author.
-                    <br /><br /> This excludes links to this website (e.g. sharing of an article with another audience), using articles as references (e.g. for your own projects) or other creative uses.
-                    <br /><br /> However, generally applies:<br />
-                    I am doing this not only for myself, but to share information, strategies, code, projects and ideas with others.
-                    As long as our goals are the same, there will be no issues at all.
-                    You are allowed to use the projects and code from my website, as long as you:
-                    <ul>
-                        <li>
-                            Credit me, my work and a way of contacting me (e.g. use the link to the project or post you are using/referencing)
-                        </li>
-                        <li>
-                            Inform me (e.g. via <a href="mailto:me@sakul6499.de">e-email</a>) that you are using or referencing my content in any way
-                        </li>
-                        <li>
-                            Accept and adhere to the license of that post and/or project
-                        </li>
-                    </ul>
-                    <b>Single posts and projects may exclude and differ from this if stated differently on the project or post page.</b>
+                    
                 </div>
             </article>
         </div>
