--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -46,10 +46,10 @@
         </div>
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-link">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            Liability for content
+                            ...
                         </div>
                         BLA ...
                     </div>
@@ -60,7 +60,7 @@
     <div class="columns">
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-info">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
                             Liability for links
@@ -75,10 +75,10 @@
         </div>
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-danger">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            Liability for content
+                            ...
                         </div>
                         BLA ...
                     </div>
@@ -89,7 +89,7 @@
     <div class="columns">
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-success">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
                             Liability for third-party software, libraries and solutions
@@ -107,7 +107,7 @@
                 <article class="tile is-child notification is-warning">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            Liability for content
+                            ...
                         </div>
                         BLA ...
                     </div>
@@ -121,7 +121,7 @@
                 <article class="tile is-child notification is-warning">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            Liability for copyright
+                            Copyright
                         </div>
                         Content, data and information published on this website are subjected to the german copyright laws.<br /> Reproduction, editing, distributing as well as the use of any other use outside the copyright law are strictly forbidden and require a written permission of the author.
                         <br /><br />
