Added CloudFlare card

--- a/themes/aether/layout/legal.ejs
+++ b/themes/aether/layout/legal.ejs
@@ -77,10 +77,7 @@
             <div class="tile is-parent">
                 <article class="tile is-child notification is-danger">
                     <div class="content">
-                        <div class="is-size-5 is-family-code">
-                            ...
-                        </div>
-                        BLA ...
+                        ...
                     </div>
                 </article>
             </div>
@@ -149,12 +146,29 @@
         </div>
         <div class="column">
             <div class="tile is-parent">
-                <article class="tile is-child notification is-warning">
+                <article class="tile is-child notification is-link">
                     <div class="content">
                         <div class="is-size-5 is-family-code">
-                            Liability for content
+                            CloudFlare
                         </div>
-                        BLA ...
+                        This website integrates components of <a href="https://www.cloudflare.com/">CloudFlare</a>.
+                        <br/>
+                        <a href="https://www.cloudflare.com/">CloudFlare</a> is used as:
+                        <ul>
+                            <li>a CDN (Content-Delivery-Network); One place for getting the entire website</li>
+                            <li>a cache for faster response-time</li>
+                            <li>an optimization platform (Rocket Loader; See below) for optimized builds</li>
+                            <li>a domain and DNS controller, used for faster routing</li>
+                            <li>as a server shield against attacks</li>
+                        </ul>
+                        To provide these features, <b>all traffic</b> is routed through <a href="https://www.cloudflare.com/">CloudFlare</a>.
+                        <a href="https://www.cloudflare.com/">CloudFlare</a> itself uses several technologies to shield and optimize, such as their <a href="https://blog.cloudflare.com/we-have-lift-off-rocket-loader-ga-is-mobile/">Rocket Loader</a>.
+                        <br/>
+                        Additionally, <a href="https://www.cloudflare.com/">CloudFlare</a> is collecting minimal, anonymised, usage data of <b>all traffic</b> passing through them.
+                        This data is only kept for a limited time frame and only visible to the owner.
+                        Although, the same data can be collected on the servers.
+                        <br/>
+                        For further information, please consider <a href="https://www.cloudflare.com/">CloudFlare</a>'s <a href="https://www.cloudflare.com/privacypolicy/">privacy policy</a>.
                     </div>
                 </article>
             </div>
